change user and group to vagrant

--- a/files/zesar.service
+++ b/files/zesar.service
@@ -3,11 +3,11 @@ Description=Gunicorn instance to serve zesar
 After=network.target
 
 [Service]
-User=admin
-Group=nginx
-WorkingDirectory=/home/admin/files/srw.zesar
-Environment="PATH=/home/admin/.venv34/bin/"
-ExecStart=/home/admin/.venv34/bin/gunicorn  --paste /home/admin/files/production.ini
+User=vagrant
+Group=vagrant
+WorkingDirectory=/home/vagrant/files/srw.zesar
+Environment="PATH=/home/vagrant/.venv34/bin/"
+ExecStart=/home/vagrant/.venv34/bin/gunicorn  --paste /home/vagrant/files/production.ini
 
 [Install]
 WantedBy=multi-user.target
